--- a/multichannel-widget/build.gradle
+++ b/multichannel-widget/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'id.zelory:compressor:2.1.0'
     implementation 'com.google.android.material:material:1.0.0'
-    api 'com.qiscus.sdk:chat-core-custom:1.3.10'
+    api 'com.qiscus.sdk:chat-core:1.3.8'
     implementation 'com.mikhaellopez:circularimageview:4.1.1'
     implementation 'androidx.browser:browser:1.3.0-alpha01'
 
