--- a/multichannel-widget/build.gradle
+++ b/multichannel-widget/build.gradle
@@ -43,7 +43,9 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'id.zelory:compressor:2.1.0'
     implementation 'com.google.android.material:material:1.0.0'
-    api 'com.qiscus.sdk:chat-core:1.3.8'
+    api 'com.qiscus.sdk:chat-core:1.3.15-beta.2'
+    implementation "com.qiscus.utils:nirmana:1.2.1"
+    implementation "com.qiscus.utils:jupuk:1.1.4"
     implementation 'com.mikhaellopez:circularimageview:4.1.1'
     implementation 'androidx.browser:browser:1.3.0-alpha01'
 
