--- a/gradle.properties
+++ b/gradle.properties
@@ -19,6 +19,6 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
-libraryGroupId=com.qiscus.qiscuschat
+libraryGroupId=com.qiscus.qiscusmultichannel
 libraryArtifactId=multichannel-widget
 libraryVersion=0.0.7-SNAPSHOT
