--- a/multichannel-widget/src/main/AndroidManifest.xml
+++ b/multichannel-widget/src/main/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.qiscus.integrations.multichannel_sample">
+    package="com.qiscus.qiscusmultichannel">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application android:theme="@style/AppTheme">
-        <activity android:name="com.qiscus.qiscuschat.ui.login.LoginActivity" />
-        <activity android:name="com.qiscus.qiscuschat.ui.loading.LoadingActivity" />
-        <activity android:name="com.qiscus.qiscuschat.ui.chat.image.SendImageConfirmationActivity" />
-        <activity android:name="com.qiscus.qiscuschat.ui.chat.ChatRoomActivity">
+        <activity android:name=".ui.login.LoginActivity" />
+        <activity android:name=".ui.loading.LoadingActivity" />
+        <activity android:name=".ui.chat.image.SendImageConfirmationActivity" />
+        <activity
+            android:name=".ui.chat.ChatRoomActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="com.qiscus.example.mybb" />
@@ -34,10 +36,10 @@
                     android:scheme="http" />
             </intent-filter>
         </activity>
-        <activity android:name="com.qiscus.qiscuschat.ui.webView.WebViewActivity" />
+        <activity android:name=".ui.webView.WebViewActivity" />
 
         <receiver
-            android:name="com.qiscus.qiscuschat.util.NotificationClickReceiver"
+            android:name=".util.NotificationClickReceiver"
             android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
