--- a/multichannel-widget/src/main/AndroidManifest.xml
+++ b/multichannel-widget/src/main/AndroidManifest.xml
@@ -3,14 +3,17 @@
     package="com.qiscus.qiscusmultichannel">
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28"/>
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application android:theme="@style/AppTheme">
-        <activity android:name=".ui.loading.LoadingActivity"></activity>
+        <activity android:name=".ui.loading.LoadingActivity" />
         <activity android:name=".ui.chat.image.SendImageConfirmationActivity" />
-        <activity android:name=".ui.chat.ChatRoomActivity"
+        <activity
+            android:name=".ui.chat.ChatRoomActivity"
+            android:exported="true"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
