--- a/multichannel-widget/build.gradle
+++ b/multichannel-widget/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'id.zelory:compressor:3.0.1'
     implementation 'com.google.android.material:material:1.0.0'
