--- a/multichannel-widget/build.gradle
+++ b/multichannel-widget/build.gradle
@@ -25,6 +25,11 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+    lintOptions {
+        checkReleaseBuilds false
+        //If you want to continue even if errors found use following line
+        abortOnError false
+    }
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
     }
