--- a/multichannel-widget/src/main/AndroidManifest.xml
+++ b/multichannel-widget/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application android:theme="@style/AppTheme">
+        <meta-data android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_mybb_notif" />
         <activity android:name=".ui.loading.LoadingActivity" />
         <activity android:name=".ui.chat.image.SendImageConfirmationActivity" />
         <activity
