--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,6 @@ kotlin.code.style=official
 libraryGroupId=com.qiscus.integrations
 libraryArtifactId=multichannel-widget
 libraryVersion=0.0.30-v3
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
