refactor(code): apply some code cause effect upgrade agp8

--- a/multichannel-widget/build.gradle
+++ b/multichannel-widget/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 android {
-    compileSdkVersion 32
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 34
+//    buildToolsVersion "30.0.3"
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 32
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -33,7 +33,7 @@ android {
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
     }
-
+    namespace 'com.qiscus.qiscusmultichannel'
 }
 
 dependencies {
@@ -46,7 +46,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'id.zelory:compressor:3.0.1'
     implementation 'com.google.android.material:material:1.0.0'
     api 'com.qiscus.sdk:chat-core:3.0.0-beta.31'
