--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 32
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 34
+//    buildToolsVersion "30.0.3"
     defaultConfig {
         applicationId "com.qiscus.integrations.multichannel_sample"
-        minSdkVersion 16
-        targetSdkVersion 32
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -29,11 +29,15 @@ android {
     packagingOptions {
         exclude 'META-INF/rxjava.properties'
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+    namespace 'com.qiscus.integrations.multichannel_sample'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation"org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'com.google.firebase:firebase-messaging:20.0.1'
